--- a/default.hbs
+++ b/default.hbs
@@ -5,6 +5,8 @@
     {{> meta}}
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,600%7CRoboto+Slab:300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{{asset "css/uno-zen.css"}}" />
+    <link rel="stylesheet" href="/highlight/styles/tomorrow.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     {{ghost_head}}
   </head>
   <body class="{{body_class}}">
@@ -20,7 +22,8 @@
       </section>
     </main>
     {{ghost_foot}}
-
+    <script src="/highlight/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
     <script src="{{asset "js/uno-zen.common.js"}}" type="text/javascript" charset="utf-8"></script>
     {{#is "post, page"}}
       <script src="{{asset "js/uno-zen.post.js"}}" type="text/javascript" charset="utf-8"></script>
