--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -46,36 +46,42 @@ classes that you can use:
 
 <nav class="navigation right">
   <ul class="social expanded">
-
-  <!-- Twitter -->
   <li class="social item hvr-grow-rotate">
-    <a rel="me" target="blank" href="https://twitter.com/kikobeats" title="@Kikobeats on Twitter">
-      <i class='icon icon-social-twitter'></i>
-      <span class="label">Twitter</span>
-    </a>
-  </li>
-
-  <!-- Linkedin -->
-  <li class="social item hvr-grow-rotate">
-    <a rel="me" target="blank" href="https://linkedin.com/in/kikobeats" title="Kikobeats on LinkedIn">
-      <i class='icon icon-social-linkedin'></i>
-      <span class="label">Linkedin</span>
+    <a href="http://www.jianshu.com/users/3e55748920d2/latest_articles" title="@KtZhang 的简书" target="_blank">
+      <i class='social fa fa-book'></i>
+      <span class="label">简书</span>
     </a>
   </li>
 
   <!-- Github -->
   <li class="social item hvr-grow-rotate">
-    <a rel="me" target="blank" href="https://github.com/Kikobeats" title="Kikobeats on Github">
-      <i class='icon icon-social-github'></i>
+    <a href="https://github.com/bestswifter" title="@KtZhang 的 Github" target="_blank">
+      <i class='social fa fa-github'></i>
       <span class="label">Github</span>
+    </a>
+  </li>
+
+  <!-- Weibo -->
+  <li class="social item hvr-grow-rotate">
+    <a href="http://weibo.com/bestswifter" title="@bestswifter" target="_blank">
+      <i class='social fa fa-weibo'></i>
+      <span class="label">weibo</span>
     </a>
   </li>
 
   <!-- RSS -->
   <li class="social item hvr-grow-rotate">
-    <a href="/rss/" title="Subscribe to RSS">
-      <i class='icon icon-rss'></i>
+    <a href="{{@blog.url}}/rss/" rel="author" title="RSS" target="_blank">
+      <i class='social fa fa-rss'></i>
       <span class="label">RSS</span>
+    </a>
+  </li>
+
+  <!-- Email -->
+  <li class="social item hvr-grow-rotate">
+    <a href="mailto:ktzhang@bestswifter.com" title="邮件联系我">
+      <i class='social fa fa-envelope'></i>
+      <span class="label">Email</span>
     </a>
   </li>
 
