--- a/default.hbs
+++ b/default.hbs
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,600%7CRoboto+Slab:300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{{asset "css/uno-zen.css"}}" />
     <link rel="stylesheet" href="/highlight/styles/tomorrow.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/font-awesome.min.css" rel="stylesheet">
     {{ghost_head}}
   </head>
   <body class="{{body_class}}">
