修改页脚信息

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer>
   <span class="copyright">
-    &copy; {{date format="YYYY"}}. All rights reserved. Built with <a href="https://github.com/Kikobeats/uno-zen" target="_blank">Uno Zen</a> under <a href="https://ghost.org/" target="_blank">Ghost</a>. Original design by <a href="https://daleanthony.com" target="_blank">Dale Anthony</a>.
+    &copy; {{date format="YYYY"}}. All rights reserved.<br> 由 <a href="https://bestswifter.com" target="_blank">bestswifter</a> 创建，代码在 <a href="https://github.com/bestswifter/uno-zen" target="_blank">GitHub</a> 上开源.</a>.
   </span>
 </footer>
