@vvlong~    thanks@bestswifter

--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -55,7 +55,7 @@ classes that you can use:
 
   <!-- Github -->
   <li class="social item hvr-grow-rotate">
-    <a href="https://github.com/bestswifter" title="@KtZhang 的 Github" target="_blank">
+    <a href="https://github.com/vvlong-can" title="@vvlong 的 Github" target="_blank">
       <i class='social fa fa-github'></i>
       <span class="label">Github</span>
     </a>
@@ -63,7 +63,7 @@ classes that you can use:
 
   <!-- Weibo -->
   <li class="social item hvr-grow-rotate">
-    <a href="http://weibo.com/bestswifter" title="@bestswifter" target="_blank">
+    <a href="http://weibo.com/1812661334" title="@vvlong" target="_blank">
       <i class='social fa fa-weibo'></i>
       <span class="label">weibo</span>
     </a>
@@ -79,7 +79,7 @@ classes that you can use:
 
   <!-- Email -->
   <li class="social item hvr-grow-rotate">
-    <a href="mailto:ktzhang@bestswifter.com" title="邮件联系我">
+    <a href="mailto:vvlong-can@qq.com" title="邮件联系我">
       <i class='social fa fa-envelope'></i>
       <span class="label">Email</span>
     </a>
