--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -47,7 +47,7 @@ classes that you can use:
 <nav class="navigation right">
   <ul class="social expanded">
   <li class="social item hvr-grow-rotate">
-    <a href="http://www.jianshu.com/users/3e55748920d2/latest_articles" title="@KtZhang 的简书" target="_blank">
+    <a href="http://www.jianshu.com/users/719b923e2e0a/latest_articles" title="@vvlong 的简书" target="_blank">
       <i class='social fa fa-book'></i>
       <span class="label">简书</span>
     </a>
